--- a/index.src.html
+++ b/index.src.html
@@ -3568,6 +3568,8 @@ spec: SHA2; urlPrefix: http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf
   6.  If |exact match| is `true`, and |path list A| does not have the same
       number of items as |path list B|, return "`Does Not Match`".
 
+  7. If |exat match| is `false`, remove last item from |path list A|.
+
   7.  For each |piece A| in |path list A|:
 
       1.  Let |piece B| be the next item in |path list B|.
